Fixed Guild Columns ~RookieRabbit 